--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -22,9 +22,9 @@
     <h2><%= user.userName %> has <%= left %> books to finish.</h2>
 
     <form action="/todos/createTodo" method='POST'>
-        <label for="">Book Title: <input type="text" placeholder="Enter book title" name='todoItem'></label>
+        <label for="">Book Title: <input type="text" placeholder="Enter Book Title" name='todoItem'></label>
 
-        <label for="">Author: <input type="text" placeholder="Author's name" name='author'>
+        <label for="">Author: <input type="text" placeholder="Author's Name" name='author'>
         </label>
 
         <label for="">Rating: <input type="number" placeholder="1" name='bookRating'>
