--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -14,6 +14,7 @@
             <li class='todoItem' data-id='<%=el._id%>'>
                 <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.todo %></span>
                 <span><%= el.bookRating %></span>
+                <span>Date added: <%= el.dateAdded %></span>
                 <span class='del'> Delete </span>
             </li>
     <% }) %>    
